# vidya

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/vidya/: bot.py  moderation.py  scraper.py  utils.py
tests/: conftest.py  test_bot.py  test_moderation.py  test_scraper.py  test_utils.py
